meu_site/meu_site_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite
  namespace: default
spec:
  selector:
    app: mysite
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
