meu_site/meu_site_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite-ingress
  namespace: default
  annotations:
    nginx.ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: meusite.saulo.info   # Substitua pelo seu domínio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysite
            port:
              number: 80
